--- a/src/template.html
+++ b/src/template.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <h1>The Slop Shop</h1>
+        <button class="Home">HOME</button>
+        <button class="menu">MENU</button>
+        <button class="contact">BUTTON</button>
+      </nav>
+    </header>
+    <div id="content"></div>
+  </body>
 </html>
