fixed tab rendering bug

--- a/src/template.html
+++ b/src/template.html
@@ -9,9 +9,9 @@
     <header>
       <nav>
         <h1>The Slop Shop</h1>
-        <button class="Home">HOME</button>
+        <button class="home">HOME</button>
         <button class="menu">MENU</button>
-        <button class="contact">BUTTON</button>
+        <button class="about">ABOUT</button>
       </nav>
     </header>
     <div id="content"></div>
